# sigbot

./: Cargo.toml  README.md
.github/workflows/: dependabot.rs  dependabot.yml  rust.yml
src/: debug.rs  main.rs  quick_hash.rs  resample.rs  signal.rs
src/bot/: mod.rs
