[package]
name = "sigbot"
version = "0.1.0"
edition = "2021"
authors = [ "Kaspar Schleiser <kaspar@schleiser.de>" ]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bincode = "1.3.3"
camino = "1.1.6"
clap = { version = "4.4.7", features = ["cargo", "env"] }
console-subscriber = "0.2.0"
dasp = { version = "0.11.0", features = ["signal", "ring_buffer", "interpolate-sinc", "interpolate"] }
env_logger = "0.10.0"
flume = { version = "0.11.0", features = ["async"] }
futures = "0.3.29"
jammdb = "0.10.0"
log = "0.4.20"
num_cpus = "1.16.0"
once_cell = "1.18.0"
presage = { git = "https://github.com/whisperfish/presage" }
presage-store-sled = { git = "https://github.com/whisperfish/presage" }
qr2term = "0.3.1"
redlux = { version = "0.7.0", default-features = false }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
shellexpand = "3.1.0"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
url = "2.4.1"
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs" }

[features]
opencl = ["whisper-rs/opencl"]

[patch.crates-io]
"curve25519-dalek" = { git = "https://github.com/signalapp/curve25519-dalek", tag = 'signal-curve25519-4.0.0' }
