[package]
name = "sigbot"
version = "0.1.0"
edition = "2021"
authors = [ "Kaspar Schleiser <kaspar@schleiser.de>" ]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bincode = "1.3.3"
camino = "1.1.9"
clap = { version = "4.5.37", features = ["cargo", "env"] }
console-subscriber = "0.2.0"
dasp = { version = "0.11.0", features = ["signal", "ring_buffer", "interpolate-sinc", "interpolate"] }
env_logger = "0.11.8"
flume = { version = "0.11.1", features = ["async"] }
futures = "0.3.31"
jammdb = "0.11.0"
log = "0.4.27"
num_cpus = "1.16.0"
once_cell = "1.21.3"
#presage = { git = "https://github.com/whisperfish/presage", rev = "0da7b5774" }
#presage-store-sqlite = { git = "https://github.com/whisperfish/presage", rev = "0da7b5774" }
presage = { git = "https://github.com/kaspar030/presage", rev = "fc593478" }
presage-store-sqlite = { git = "https://github.com/kaspar030/presage", rev = "fc593478" }
qr2term = "0.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
sqlx = { version = "0.8.5", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
] }
url = "2.5.4"
whisper-simple = { git = "ssh://git@github.com/kaspar030/whisper-simple" }

[features]
coreml = ["whisper-simple/coreml"]
cuda = ["whisper-simple/cuda"]
hipblas = ["whisper-simple/hipblas"]
openblas = ["whisper-simple/openblas"]
metal = ["whisper-simple/metal"]
vulkan = ["whisper-simple/vulkan"]
openmp = ["whisper-simple/openmp"]

[patch.crates-io]
"curve25519-dalek" = { git = "https://github.com/signalapp/curve25519-dalek", tag = 'signal-curve25519-4.1.3' }
